--- a/CSharpTestTask.ConsoleApp/CSharpTestTask.ConsoleApp.csproj
+++ b/CSharpTestTask.ConsoleApp/CSharpTestTask.ConsoleApp.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>GZipTest</AssemblyName>
+    <TargetFramework>netcoreapp3.0</TargetFramework>    
+    <AssemblyName>GZipTest</AssemblyName>   
   </PropertyGroup>
 
   <ItemGroup>
